--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
     <module>dubbo</module>
     <module>spring-boot-dubbo</module>
     <module>spring-cloud-zuul</module>
+    <module>spring-boot-logger</module>
+    <module>spring-boot-datasource</module>
+    <module>spring-boot-encrypt</module>
   </modules>
 
   <properties>
