update apollo client version to 1.0.0

--- a/spring-boot-dubbo/spring-boot-dubbo-provider/src/main/resources/application.properties
+++ b/spring-boot-dubbo/spring-boot-dubbo-provider/src/main/resources/application.properties
@@ -1,2 +1,5 @@
+app.id=spring-boot-dubbo-provider
+# set apollo meta server address, adjust to actual address if necessary
+apollo.meta=http://localhost:8080
 # will inject 'application' namespace in bootstrap phase
 apollo.bootstrap.enabled=true
