add example for spring-cloud-gateway

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>sentinel</module>
     <module>properties-keeper</module>
     <module>spring-boot-agent</module>
+    <module>spring-cloud-gateway</module>
   </modules>
 
   <properties>
