--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>dubbo</module>
     <module>spring-boot-dubbo</module>
     <module>spring-cloud-zuul</module>
+    <module>spring-cloud-zuul-retalimit</module>
     <module>spring-boot-logger</module>
     <module>dynamic-datasource</module>
     <module>spring-boot-encrypt</module>
@@ -35,6 +36,7 @@
     <zkclient.version>0.10</zkclient.version>
     <curator.version>2.12.0</curator.version>
     <archaius.version>0.7.6</archaius.version>
+    <spring.cloud.zuul.ratelimit.version>LATEST</spring.cloud.zuul.ratelimit.version>
   </properties>
 
   <dependencyManagement>
@@ -117,6 +119,11 @@
             <artifactId>annotations</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.marcosbarbero.cloud</groupId>
+        <artifactId>spring-cloud-zuul-ratelimit</artifactId>
+        <version>${spring.cloud.zuul.ratelimit.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
