--- a/spring-boot-agent/app/pom.xml
+++ b/spring-boot-agent/app/pom.xml
@@ -1,22 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>spring-boot-agent</artifactId>
-        <groupId>com.ctrip.framework.apollo</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>app</artifactId>
-
-    <dependencies>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-    </dependencies>
-
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
+    <parent> 
+        <artifactId>spring-boot-agent</artifactId>  
+        <groupId>com.ctrip.framework.apollo</groupId>  
+        <version>1.0-SNAPSHOT</version> 
+    </parent>  
+    <modelVersion>4.0.0</modelVersion>  
+    <artifactId>app</artifactId>  
+    <dependencies> 
+        <dependency> 
+            <groupId>org.springframework.boot</groupId>  
+            <artifactId>spring-boot-starter</artifactId>  
+            <exclusions> 
+                <exclusion> 
+                    <groupId>javax.annotation</groupId>  
+                    <artifactId>javax.annotation-api</artifactId> 
+                </exclusion>  
+                <exclusion> 
+                    <groupId>org.springframework.boot</groupId>  
+                    <artifactId>spring-boot-starter-logging</artifactId> 
+                </exclusion> 
+            </exclusions> 
+        </dependency>  
+        <dependency> 
+            <groupId>com.ctrip.framework.apollo</groupId>  
+            <artifactId>apollo-client</artifactId>  
+            <version>1.5.0</version>  
+            <scope>compile</scope>  
+            <exclusions> 
+                <exclusion> 
+                    <groupId>javax.inject</groupId>  
+                    <artifactId>javax.inject</artifactId> 
+                </exclusion>  
+                <exclusion> 
+                    <groupId>aopalliance</groupId>  
+                    <artifactId>aopalliance</artifactId> 
+                </exclusion> 
+            </exclusions> 
+        </dependency> 
+    </dependencies>  
+    <dependencyManagement> 
+        <dependencies> 
+            <dependency> 
+                <groupId>org.springframework.boot</groupId>  
+                <artifactId>spring-boot</artifactId>  
+                <version>2.0.3.RELEASE</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.springframework.boot</groupId>  
+                <artifactId>spring-boot-autoconfigure</artifactId>  
+                <version>2.0.3.RELEASE</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.springframework</groupId>  
+                <artifactId>spring-core</artifactId>  
+                <version>5.0.7.RELEASE</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>ch.qos.logback</groupId>  
+                <artifactId>logback-classic</artifactId>  
+                <version>1.2.3</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.apache.logging.log4j</groupId>  
+                <artifactId>log4j-to-slf4j</artifactId>  
+                <version>2.10.0</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.slf4j</groupId>  
+                <artifactId>jul-to-slf4j</artifactId>  
+                <version>1.7.25</version> 
+            </dependency> 
+        </dependencies> 
+    </dependencyManagement> 
 </project>
