feat:Spring/SpringMVC项目下如何通过Apollo配置中心实现动态调整日志的属性值

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <module>properties-keeper</module>
     <module>spring-boot-agent</module>
     <module>spring-cloud-gateway</module>
+    <module>spring-mvc-logger</module>
   </modules>
 
   <properties>
